# tanki

./: CApp.cpp  CApp.h  CInitResources.cpp  CInitResources.h  CLoadMedia.cpp  CLoadMedia.h  CMakeLists.txt  CMenu.cpp  CMenu.h  CMyErrorShow.cpp  CMyErrorShow.h  CTank.cpp  CTank.h  CTankBody.cpp  CTankBody.h  CTexture.cpp  CTexture.h  CTurret.cpp  CTurret.h  CWindow.cpp  CWindow.h  Ctext.cpp  Ctext.h  MyColor.h  cleanup.h  coordinats.h  main.cpp
tanki/: README.md
tanki/SDL_examples/: CMakeLists.txt  main.cpp
